# okay-glow

./: .gitignore  c.sh  convert-r.py  index.html  tree.txt  vercel.json
backend/: .gitignore  Cargo.toml  tree.txt
backend/migrations/: 001_create_subscribers_table.sql  002_create_users_and_journal_entries.sql  003_create_canvas_pixels_table.sql
backend/src/: db.rs  main.rs  types.rs
backend/src/middleware/: auth.rs
backend/src/models/: journal.rs  mod.rs  subscriber.rs  user.rs
backend/src/routes/: auth.rs  canvas.rs  email.rs  journal.rs  mod.rs  ws.rs
backend/src/services/: email_service.rs  journal_service.rs  mod.rs
backend/src/websocket/: canvas_actor.rs  mod.rs  websocket_actor.rs
js/: about.js  art-corner-backend.js  art-corner.js  blog-navigation.js  contact.js  display-blogs.js  dropdown.js  faq.js  interactive-section.js  journey.js  marquee.js  quiz-paywall.js  quiz-ripple-bg.js  quiz.js  ripple-bg.js  routineCustomizer.js  routineGenerator.js  skin-type-quiz.js  subscribe-submit.js  temp.txt
pages/: about.html  art-corner.html  contact.html  expert.html  history.html  index.html  marquee.html  privacy.html  quiz.html  terms.html
pages/blog/: blog.html
pages/blog/posts/: acne-and-breakouts.html  double-cleansing.html  identify-skin-types.html  layer-skincare-products.html  right-skincare-products.html
public/: blogData.json
styles/: about.css  art-corner-styles.css  blog.css  contact.css  expert-styles.css  history-styles.css  identify-skin-type.css  quiz.css  routine.css  styles.css
