[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenvy = "0.15"
env_logger = "0.10"
lettre = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "runtime-tokio-native-tls"] }
uuid = "1.2"
tokio = { version = "1.0", features = ["full"] }