[package]
name = "backend"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0"
dotenvy = "0.15"
env_logger = "0.10"
lettre = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.6", features = ["postgres", "uuid", "runtime-actix-native-tls", "chrono"] }
uuid = { version = "1.1", features = ["v4", "serde"] }
tokio = { version = "1.0", features = ["full"] }
bcrypt = "0.10"
jsonwebtoken = "8.1"
chrono = { version = "0.4", features = ["serde"] }


